package domain;

public class Administrador {
  private String nombre;
  private String apellido;

  public Administrador(String nombre, String apellido) {
    this.nombre = nombre;
    this.apellido = apellido;
  }
}
