package domain;

public class Etiqueta {
  private String titulo;

  public Etiqueta(String titulo) {
    this.titulo = titulo;
  }
}
